--- a/sass/_allproduct.scss
+++ b/sass/_allproduct.scss
@@ -82,12 +82,6 @@
       gap: 16px;
       flex-wrap: wrap;
     }
-
-    .list-row_sm {
-      @media only screen and (max-width: $bp-small) {
-        display: none;
-      }
-    }
   }
 
   &__right {
@@ -191,7 +185,7 @@
     text-decoration: none;
     overflow: hidden;
     z-index: 1;
-    
+
     * {
       position: relative;
       z-index: 2;
@@ -400,12 +394,12 @@
     }
 
     &__left {
-      align-items: center;
+      align-items: flex-start;
       gap: 40px;
 
       width: 100%;
-      max-width: 532px;
-      height: 613px;
+      max-width: 900px;
+      height: auto;
     }
 
     .headline {
@@ -426,10 +420,16 @@
 
     .listing-categories {
       gap: 16px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      height: auto;
 
       &__row {
         gap: 16px;
-        flex-wrap: wrap;
+        display: contents;
+        flex-wrap: nowrap;
+        flex-direction: row;
       }
     }
 
@@ -438,7 +438,7 @@
       gap: 42px;
 
       width: 100%;
-      max-width: 650px;
+      max-width: fit-content;
       height: auto;
     }
 
@@ -448,9 +448,8 @@
 
     .product-card {
       width: 100%;
-      max-width: 305px;
-      min-width: 305px;
-      height: 481px;
+      max-width: 380px;
+      height: 550px;
 
       margin: 0 auto;
 
@@ -458,8 +457,8 @@
     }
 
     .product__image {
-      width: 305px;
-      height: 320px;
+      width: 380px;
+      height: 400px;
     }
 
     .product__desc {
@@ -492,10 +491,211 @@
       font-weight: 300;
       font-size: 22px;
     }
+
+    .shop-cta {
+      align-self: flex-start;
+    }
+  }
+}
+@media only screen and (max-width: $bp-small) {
+  .all-products {
+    padding: 96px 80px;
+
+    &__left {
+      align-items: flex-start;
+      gap: 40px;
+
+      width: 100%;
+      max-width: 900px;
+      height: auto;
+    }
+
+    .listing-categories {
+      flex-wrap: nowrap;
+      overflow-x: auto;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      &__row {
+        gap: 16px;
+        display: contents;
+      }
+    }
+
+    &__right {
+      align-items: center;
+      gap: 42px;
+
+      width: 100%;
+      max-width: fit-content;
+      height: auto;
+    }
+
+    .product-row {
+      gap: 40px;
+      justify-content: center;
+    }
+
+    .product-card {
+      width: 100%;
+      max-width: 505px;
+      height: 650px;
+
+      margin: 0 auto;
+
+      border: 1px solid $color-primary;
+    }
+
+    .product__image {
+      width: 505px;
+      height: 500px;
+    }
+
+    .product__desc {
+      padding: 24px;
+      gap: 10px;
+
+      width: 305px;
+      height: 161px;
+
+      border-top: 1px solid $color-primary;
+    }
+
+    .product__title {
+      font-size: 22px;
+    }
+
+    .product__price {
+      font-weight: 700;
+      font-size: 22px;
+    }
+
+    .rating2 {
+      display: flex;
+      flex-direction: row;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .ratings_number {
+      font-weight: 300;
+      font-size: 22px;
+    }
+
+    .shop-cta {
+      align-self: center;
+    }
   }
 }
 
 @media only screen and (max-width: $bp-smallest) {
+  .all-products {
+    padding: 64px 16px;
+
+    &__wrapper {
+      gap: 40px;
+      max-width: 1440px;
+      width: 100%;
+    }
+
+    &__left {
+      align-items: flex-start;
+      gap: 48px;
+
+      width: 100%;
+      max-width: 532px;
+      height: auto;
+    }
+
+    .headline-title {
+      font-size: 24px;
+      font-weight: 300;
+    }
+
+    .headline-subtitle {
+      font-size: 40px;
+      font-weight: 300;
+    }
+
+    .listing-categories {
+      gap: 12px;
+
+      &__row {
+        gap: 16px;
+        flex-wrap: wrap;
+      }
+    }
+
+    &__right {
+      align-items: center;
+      gap: 40px;
+
+      width: 100%;
+      max-width: 650px;
+      height: auto;
+    }
+
+    .product-row {
+      justify-content: center;
+      gap: 40px;
+    }
+
+    .product-card {
+      width: 100%;
+      max-width: 443px;
+      min-width: 443px;
+      height: fit-content;
+
+      margin: 0 auto;
+
+      border: 1px solid $color-primary;
+    }
+
+    .product__image {
+      width: 443px;
+      height: fit-content;
+    }
+
+    .product__desc {
+      padding: 24px;
+      gap: 10px;
+
+      width: 305px;
+      height: 161px;
+
+      border-top: 1px solid $color-primary;
+    }
+
+    .product__title {
+      font-size: 20px;
+    }
+
+    .product__price {
+      font-weight: 700;
+      font-size: 20px;
+    }
+
+    .rating2 {
+      display: flex;
+      flex-direction: row;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .ratings_number {
+      font-weight: 300;
+      font-size: 22px;
+    }
+
+    .shop-cta {
+      align-self: center;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
   .all-products {
     padding: 64px 16px;
 
@@ -543,6 +743,7 @@
     }
 
     .product-row {
+      justify-content: flex-start;
       gap: 40px;
     }
 
