--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -139,12 +139,16 @@
   .nav__mobile {
     display: flex;
     flex-direction: column;
+
     opacity: 0;
+    transform: translatex(100%);
     pointer-events: none;
-    transition: opacity 0.3s ease;
+
+    transition: opacity 1s ease, transform 1s ease;
     position: fixed;
     top: 0;
     left: 0;
+
     width: 100%;
     height: 100vh;
     background-color: $content-color-light-1;
@@ -193,11 +197,18 @@
       padding: 20px;
     }
 
+    .item-andsvg {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+    }
+
     &-item {
       list-style: none;
 
       a {
-        font-size: 40px;
+        font-size: 32px;
         text-decoration: none;
         color: $color-primary-dark-2;
         font-family: $font-primary;
@@ -231,8 +242,8 @@
   }
 
   .nav__checkbox:checked ~ .nav__mobile {
-    display: flex;
     opacity: 1;
     pointer-events: all;
+    transform: translateY(0);
   }
 }
