--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -76,6 +76,7 @@ h6 {
   align-items: center;
   padding: 16px 26px;
   gap: 10px;
+  white-space: nowrap;
 
   width: max-content;
   height: 52px;
@@ -103,6 +104,7 @@ h6 {
   align-items: center;
   padding: 16px 26px;
   gap: 10px;
+  white-space: nowrap;
 
   width: max-content;
   height: 52px;
