New Page : About

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,11 +6,13 @@ $color-primary-dark-2: #213721;
 $color-primary-dark-3: #101c10;
 
 $content-color-light-1: #f2f6ef;
-$content-color-light-2: #c7d1c6;
+$content-color-light-2: hsl(115, 11%, 80%);
 $content-color-light-3: #899f87;
 
 $content-color-dark-1: #3c5e39;
 $content-color-dark-2: #213721;
+
+$content-color-light-4: #738c71; 
 
 $container-max-widths: (
   sm: 540px,
