--- a/sass/landingpage/_allproduct.scss
+++ b/sass/landingpage/_allproduct.scss
@@ -80,7 +80,7 @@
       flex-direction: row;
       align-items: flex-start;
       gap: 16px;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
     }
   }
 
