--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,9 @@
 // 3. About Page
 @import "aboutpage/heroabout";
 @import "aboutpage/aboutus";
+@import "aboutpage/explore";
+@import "aboutpage/value";
+@import "aboutpage/ourteam";
 
 //Components
 @import "components/cta";
