--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,8 @@
 @import "aboutpage/explore";
 @import "aboutpage/value";
 @import "aboutpage/ourteam";
+@import "aboutpage/stats";
+@import "aboutpage/blogs";
 
 //Components
 @import "components/cta";
