--- a/sass/aboutpage/_ourteam.scss
+++ b/sass/aboutpage/_ourteam.scss
@@ -77,6 +77,12 @@
               color: $content-color-dark-2;
             }
 
+            .contain {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+            }
+
             .position {
               font-size: 20px;
               line-height: 140%;
@@ -88,6 +94,10 @@
               position: relative;
               width: 24px;
               height: 24px;
+
+              bottom: 50%;
+
+              cursor: pointer;
             }
 
             .icon::before,
@@ -96,6 +106,8 @@
               position: absolute;
               background-color: $content-color-dark-2;
               border-radius: 20px;
+
+              transition: all 0.2s;
             }
 
             .icon::before {
@@ -116,7 +128,50 @@
               transform: translate(-50%, -50%);
               will-change: transform;
             }
+
+            .icon:hover::after {
+              opacity: 0;
+              transform: translate(-50%, -50%) scaleY(0);
+            }
           }
+
+          .team__card-desc {
+            margin-bottom: -20px;
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
+
+            max-height: 0;
+            opacity: 0;
+            overflow: hidden;
+            transition: max-height 0.4s ease, opacity 0.3s ease;
+
+            .desc-title {
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 140%;
+              color: $content-color-dark-3;
+            }
+
+            .desc-social {
+              display: flex;
+              flex-direction: row;
+              gap: 18px;
+
+              height: 32px;
+
+              .social-icon {
+                width: 32px;
+              }
+            }
+          }
+
+          .team__card-desc.show {
+            margin-bottom: 0;
+            max-height: 500px; /* cukup besar untuk muat isi */
+            opacity: 1;
+          }
+          
 
           .sparation {
             flex: 0 0 1px;
